--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!--DOCTYPE html-->
 <html>
   <head>
+    <title>Talia Bland's Website</title>
   </head>
   <body>
-    <p>Hello Website Viewer</p>
+    <h1>Hello Website Viewer</h1>
   </body>
 </html>
